--- a/foundations/05-descendant-combinator/index.html
+++ b/foundations/05-descendant-combinator/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <p class="text">This should be styled.</p>
+      <p class="text2">This should be unstyled.</p>
     </div>
     <p class="text">This should be unstyled.</p>
     <p class="text">This should be unstyled.</p>
